--- a/index.html
+++ b/index.html
@@ -1,1 +1,152 @@
-Hello World
+<!doctype html>
+<html lang="en">
+
+<head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+        integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+
+    <title>My projects</title>
+</head>
+
+<body>
+
+
+    <main role="main">
+
+        <!-- Main jumbotron for a primary marketing message or call to action -->
+        <div class="jumbotron bg-success text-white">
+            <div class="container">
+                <h1 class="display-3">My projects</h1>
+            </div>
+        </div>
+
+        <div class="container">
+            <div class="card-deck">
+                <!-- card deck row 1 -->
+
+
+                <div class="card">
+                    <h2 class="card-title">Untitled - master thesis</h2>
+                    <div class="card-body">
+                    <p class="card-text"> The master thesis has two components, all written in <b>Python</b>:
+                    </p>
+                    <ol>
+                        <li>Custom environment for <a class="text-success" href="http://gym.openai.com/">OpenAI Gym</a> containing the simulation of a production system (system parameters are based on literature). This environment allows a reinforcement learning agent to interact with the production system and learn from its interactions with the system.
+                        </li>
+                        <li>An example implementation of a reinforcement learning agent for this environment
+                        </li>
+                    </ol></div>
+                    <div class="card-footer">
+                        <a class="btn btn-secondary btn-success" href="https://github.com/sebwindm/masterarbeit" role="button">View
+                            details &raquo;</a>
+                    </div>
+                </div><!-- /card -->
+
+
+
+                <div class="card">
+                    <h2 class="card-title">Apartment price predictor</h2>
+                    <div class="card-body">
+                    <p class="card-text">The apartment price predictor (APP) scrapes apartment offerings from the web and allows the user
+                        to predict the price/rent for an apartment, given certain features like number of rooms and the
+                        size of the apartment.</p>
+                    <p class="card-text">APP is currently under development and not deployed anywhere (backend isn't finished yet)</p>
+                    <ul>
+                        <li>Web scraper: <b>Python</b></li>
+                        <li>Data base: <b>PostgreSQL</b></li>
+                        <li>Price prediction model: <b>Ordinary least squares Linear Regression </b></li>
+                    </ul></div>
+
+                    <div class="card-footer">
+                        <a class="btn btn-secondary btn-success" href="https://github.com/sebwindm/apartment-price-predictor"
+                            role="button">View details &raquo;</a>
+                    </div>
+                </div><!-- /card -->
+
+
+
+
+            </div><!-- /card deck row 1 -->
+
+            <br><br>
+
+            <div class="card-deck">
+                <!-- card deck row 2 -->
+                <div class="card">
+                    <h2 class="card-title">360° view</h2>
+                    <div class="card-body">
+                    <p class="card-text">A web application for a fictional bank that allows its customers to see data about their real
+                        estate projects with the bank (e.g. loans).  </p>
+                        <p class="card-text">Currently not hosted anywhere.</p>
+                        <p class="card-text">Technologies used:
+                            <b>PHP</b>, <b>JavaScript</b>, <b>SQL</b></p></div>
+                    <div class="card-footer">
+                        <a class="btn btn-secondary btn-success" href="https://github.com/sebwindm/UIBK" role="button">View details
+                            &raquo;</a>
+                    </div>
+                </div><!-- /card -->
+
+                <div class="card">
+                    <h2 class="card-title">OER</h2>
+                    <div class="card-body">
+                    <p class="card-text">An interactive platform for students to learn about idea convergence. This is being used for
+                        teaching in a master program at University of Innsbruck. </p>
+                        <p class="card-text">Access it
+                        <a class="text-success" href="http://iwi.uibk.ac.at/dc/index.php">here</a>
+                         </p>
+                         <p class="card-text">Technologies used: <b>PHP</b>, <b>JavaScript</b>, <b>SQL</b></p></div>
+                    <div class="card-footer">
+                        <a class="btn btn-secondary btn-success" href="https://github.com/sebwindm/UIBK" role="button">View details
+                            &raquo;</a>
+                    </div>
+                </div><!-- /card  -->
+
+                <div class="card">
+                    <h2 class="card-title">Machine Scheduling</h2>
+                    <div class="card-body">
+                    <p class="card-text">A simulation that allows to compare multiple heuristics for machine scheduling in a flow shop
+                        production system. </p>
+                        <p class="card-text">Technologies used: <b>NetLogo</b></p></div>
+                    <div class="card-footer">
+                        <a class="btn btn-secondary btn-success" href="https://github.com/sebwindm/UIBK" role="button">View details
+                            &raquo;</a>
+                    </div>
+                </div><!-- /card  -->
+
+            </div><!-- /card deck row 2 -->
+
+
+
+
+           
+        </div>
+
+
+
+
+        <hr>
+
+
+
+    </main>
+
+
+    <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+        integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
+        integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
+        crossorigin="anonymous"></script>
+</body>
+
+</html>
